--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
   },
   "author": "",
   "license": "ISC",
+    "scripts": {
+    "start": "node index.js"
+  },
+   "engines" : {
+    "node" : "^9.8.0"
+  },
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
